--- a/tridion-akamai-purge/pom.xml
+++ b/tridion-akamai-purge/pom.xml
@@ -23,12 +23,12 @@
 		<dependency>
 			<groupId>org.suurd.tridion</groupId>
 			<artifactId>tridion-content-client</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.suurd.tridion</groupId>
 			<artifactId>tridion-discovery-client</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sdl.delivery</groupId>
